--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -4,7 +4,8 @@
     <ul class="nav navbar-nav">
       <li><%= link_to 'Dashboard', merchant_dashboard_index_path, style: 'pull-right' %>
       <%= link_to 'My Items', merchant_items_path(@merchant), style: 'pull-right' %>
-      <%= link_to 'My Invoices', merchant_invoices_path(@merchant), style: 'pull-right' %></li>
+      <%= link_to 'My Invoices', merchant_invoices_path(@merchant), style: 'pull-right' %>
+      <%= link_to 'My Discounts', merchant_bulk_discounts_path(@merchant), style: 'pull-right' %></li>
     </ul>
   </nav>
 </div>
@@ -21,6 +22,7 @@
 
   <p> Created on: <%= @invoice.created_at.strftime("%A, %B %-d, %Y") %></p>
   <p>Total Revenue: <%= @invoice.total_revenue %></p>
+  <%= render 'discounted_revenue' if @invoice.discount? == true %>
 
 
   <h4>Customer:</h4>
@@ -35,6 +37,7 @@
         <th class="th1">Quantity</th>
         <th class="th1">Unit Price</th>
         <th class="th1">Status</th>
+        <th class="th1">Discount Applied</th>
       </tr>
     </thead>
 
@@ -49,6 +52,7 @@
                                             <%= f.select :status, Invoice.statuses.keys, selected: "#{@invoice.status}" %>
                                             <%= f.submit 'Update Invoice' %>
                                           <% end %></td><br/>
+            <td style="text-align:center"><%= render 'discount_link', locals: {i: i} if i.discount_applied? == true %></td><br/>
           </tr>
         </section>
       <% end %>
